updated build fixed cart modal bugs on safari mobile

--- a/src/components/mobile-menu/mobileMenu.module.scss
+++ b/src/components/mobile-menu/mobileMenu.module.scss
@@ -2,6 +2,8 @@
 
 .mobile-menu {
   transform: translateX(-100%);
+  top: 0;
+  left: 0;
 }
 
 .mobile-menu-header {
