--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -6,8 +6,6 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 0;
-  left: 0;
   background-color: $background-color;
   width: 100%;
   z-index: 4;
